schema/testdata/validation_set_attribute_invalid_assignment_condition/schema.keel
model Post {
    fields {
        name Text?
        published Boolean?
        identity Identity?
    }

    actions {
        create ctxOnly() with (name, published) {
            @set(ctx)
        }
        create literalOnly() with (name, published) {
            @set("hello")
        }
        create trueOnly() with (name, published) {
            @set(true)
        }
        create fieldOnly() with (name) {
            @set(post.published)
        }
        create equality() with (name) {
            @set(post.published == true)
        }
        create multipleConditions() {
            @set(post.published = true and post.name = "hello")
        }
    }
}
