schema/testdata/errors/set_attribute_invalid_assignment_condition.keel
model Post {
    fields {
        name Text?
        published Boolean?
        identity Identity?
    }

    actions {
        create ctxOnly() with (name, published) {
            //expect-error:18:21:AttributeArgumentError:The @set attribute cannot be a value condition and must express an assignment
            @set(ctx)
        }
        create literalOnly() with (name, published) {
            //expect-error:18:25:AttributeArgumentError:The @set attribute cannot be a value condition and must express an assignment
            @set("hello")
        }
        create trueOnly() with (name, published) {
            //expect-error:18:22:AttributeArgumentError:The @set attribute cannot be a value condition and must express an assignment
            @set(true)
        }
        create fieldOnly() with (name) {
            //expect-error:18:32:AttributeArgumentError:The @set attribute cannot be a value condition and must express an assignment
            @set(post.published)
        }
        create equality() with (name) {
            //expect-error:33:35:E022:Operator '==' not permitted on @set
            //expect-error:18:40:AttributeArgumentError:The @set attribute cannot be a logical condition and must express an assignment
            @set(post.published == true)
        }
        create multipleConditions() {
            //expect-error:18:63:AttributeArgumentError:A @set attribute can only consist of a single assignment expression
            @set(post.published = true and post.name = "hello")
        }
    }
}
